Additional Changes to include multiple Education, Experience, and Skills.

--- a/src/main/resources/templates/educationform.html
+++ b/src/main/resources/templates/educationform.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form action="#"
-      th:action="@{/process}"
+      th:action="@{/processedu}"
       th:object="${education}"
       method="post">
      <input type="hidden" th:field="*{id}" />
