--- a/src/main/resources/templates/experienceform.html
+++ b/src/main/resources/templates/experienceform.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form action="#"
-      th:action="@{/process}"
+      th:action="@{/processexp}"
       th:object="${experience}"
       method="post">
 
