--- a/src/main/resources/templates/resumeform.html
+++ b/src/main/resources/templates/resumeform.html
@@ -11,8 +11,11 @@
       method="post">
     <h1>Resume Form</h1>
 
+    <a href="/addedu">Add Education</a>&nbsp;&nbsp;&nbsp;<a href="/addexp">Add Experience</a><br />
+
     <input type="hidden" th:field="*{id}" />
 
+    <br />
     Name :<input type="text" th:field="*{name}" />
     <span th:if="${#fields.hasErrors('name')}"
           th:errors="*{name}"></span><br />
@@ -23,13 +26,9 @@
     <br />
 
 
-    <a href="/addedu">Add Education</a><br />
-
-    <a href="/addexp">Add Experience</a><br />
-
-    <br />
-
     <input type="submit" value="Submit" />
+
+    <!--<input type="submit" value="Submit" /> -->
 
 </form>
 </body>
