--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -9,40 +9,41 @@
 <a href="/addedu">Add Education</a><br />
 <a href="/addexp">Add Experience</a><br />
 <a href="/addskills">Add Skills</a><br />
-<table>
+
  <h1> Resume </h1>
-<tr>
-    <td th:each="resume : ${resumes}">
+
+    <div th:each="resume : ${resumes}">
         <span th:text="${resume.name}"></span><br />
         <span th:text="${resume.email}"></span><br />
-    </td>
-
-    Education <br />
-     <td th:each="education : ${educations}">
-        <span th:text="${education.major}"></span><br />
-        <span th:text="${education.degree}"></span><br />
-        <span th:text="${education.year}"></span><br />
-        <span th:text="${education.school}"></span><br />
-     </td>
-     <tr>
-
-    Experience <br />
-     <td th:each ="experience : ${experiences}">
-        <span th:text="${experience.jobTitle}"></span><br />
-        <span th:text="${experience.company}"></span><br />
-        <span th:text="${experience.serviceYear}"></span><br />
-        <span th:text="${experience.duties}"></span><br />
-     </td>
-    </tr>
+    </div>
 
     <br />
-    Skills <br />
-     <td th:each="skill : ${skills}">
-        <span th:text="${skill.skill}"></span><br />
-        <span th:text="${skill.rating}"></span><br />
-     </td>
+    <h2>Education</h2>
+    <div th:each="education : ${educations}">
+        <span th:text="${education.major}"></span><br />
+        <span th:text="${education.degree}"></span><br />
+        <span th:text="${education.school}"></span>,
+        <span th:text="${education.year}"></span><br />
 
-</tr>
-</table>
+        <br />
+    </div>
+
+    <br />
+    <h2>Experience</h2>
+    <div th:each ="experience : ${experiences}">
+        <span th:text="${experience.jobTitle}"></span><br />
+        <span th:text="${experience.company}"></span>,
+        <span th:text="${experience.serviceYear}"></span><br />
+        Duties: <span th:text="${experience.duties}"></span><br />
+        <br />
+    </div>
+
+    <br />
+    <h2>Skills</h2>
+    <div th:each="skill : ${skills}">
+        <span th:text="${skill.skillname}"></span>,
+        <span th:text="${skill.rating}"></span><br />
+    </div>
+
 </body>
 </html>
