--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -20,8 +20,9 @@
     <br />
     <h2>Education</h2>
     <div th:each="education : ${educations}">
-        <span th:text="${education.major}"></span><br />
-        <span th:text="${education.degree}"></span><br />
+        <span th:text="${education.degree}"></span> in
+        <span th:text="${education.major}"></span>,<br />
+
         <span th:text="${education.school}"></span>,
         <span th:text="${education.year}"></span><br />
 
